# mtgscan-app

./: .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.yaml  docker-compose.yml  launch.sh  pyproject.toml  requirements.txt  run.sh  run_azure.sh  run_celery.sh  run_flask.sh
.github/workflows/: master_mtgscan.yml  master_qfmtgscanapp.yml
mtgscan_app/: __init__.py  app.py  main.py  scan.py
mtgscan_app/static/: style.css
mtgscan_app/templates/: upload.html
server/: Dockerfile  app.py  pyproject.toml  requirements.txt  worker.py
server/data/: Keywords.json
server/static/: index.js  style.css
server/templates/: index.html  upload.html
src/: server.py
